--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://192.168.0.20:8929/zhouyangyang/tz-ui.git"
+    "url": "https://github.com/pgzhouyangyang/lib.git"
   },
   "license": "ISC"
 }
