--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -4,8 +4,8 @@
     "path": "/changelog"
   },
   {
-    "name": "gitLab",
-    "href": "http://192.168.0.20:8929/zhouyangyang/tz-ui"
+    "name": "github",
+    "href": "https://github.com/pgzhouyangyang/ui"
   },
   {
     "name": "开始",
